<resources>
    <string name="app_name">Hangman</string>
    <string name="server_client_id">503407872082-06t83l6t2hmd22i3gpmt9r5lso3kp8l1.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="try_again">Try again</string>
    <string name="tries_left">Tries: %1$d</string>
    <string name="player_score">Player Score: %1$d</string>
    <string name="high_score">High Score: %1$d</string>
    <string name="anatomy">ANATOMY</string>
    <string name="animals">ANIMALS</string>
    <string name="buildings">BUILDINGS</string>
    <string name="bussiness">BUSSINESS</string>
    <string name="cars_and_parts">CARS AND PARTS</string>
    <string name="clothes_and_shoes">CLOTHES AND SHOES</string>
    <string name="computers">COMPUTERS</string>
    <string name="fantasy">FANTASY</string>
    <string name="foods_and_drinks">FOODS AND DRINKS</string>
    <string name="fruits">FRUITS</string>
    <string name="geography">GEOGRAPHY</string>
    <string name="health">HEALTH</string>
    <string name="house_and_materials">HOUSE AND MATERIALS</string>
    <string name="jobs_and_occupations">JOBS AND OCCUPATIONS</string>
    <string name="measurement">MEASUREMENT</string>
    <string name="music">MUSIC</string>
    <string name="random">RANDOM</string>
    <string name="school">SCHOOL</string>
    <string name="science">SCIENCE</string>
    <string name="shapes">SHAPES</string>
    <string name="sports">SPORTS</string>
    <string name="tools">TOOLS</string>
    <string name="transportation">TRANSPORTATION</string>
    <string name="trees_and_flowers">TREES AND FLOWERS</string>
    <string name="weather">WEATHER</string>
    <string name="category">Category</string>
    <string name="play_button">PLAY</string>
    <string name="letter_h">H</string>
    <string name="letter_a">A</string>
    <string name="letter_n">N</string>
    <string name="letter_g">G</string>
    <string name="letter_m">M</string>
</resources>
